
next:
          - support csv output in availability reports for every reporttype and not only all hosts/services
          - support US date format in url querys
          - added performance data overview (kudos to adagios for the inspiration)
          - support ranges in performance data bar (awiddersheim)
          - Panorama
            - added experimental IE support
          - Reports
            - fixed permission problem when using groups in cgi.cfg
          - Config Tool
            - fixed saving command lines with escaped semicolons
          - Bug Fixes
            - corrected default sorting of hosts page
            - fixed display issue with left aligned calendar popup (awiddersheim)

1.78-3   Sat Nov  2 00:45:00 CET 2013
          - Business Process
            - fixed saving graph direction
            - fixed edge layout for left-right graphs
            - fixed submiting results in test mode
          - Panorama
            - fixed not saving when starting with an empty set
          - Shinken
            - fixed livestatus error when using wrong business impact filter

1.78-2   Sun Oct 27 16:41:56 CET 2013
          - Business Process
            - openend result spool files permissons
          - Config Tool
            - fixed plugin help accordion size
          - Panorama
            - fixed nagvis panel displaying load error
            - fixed using default view with readonly mode
            - fixed draggable panels in readonly mode
          - Bug Fixes
            - fixed cascaded configs for sub components
            - fixed perfbars with zero values (awiddersheim)
            - fixed listing recurring downtimes with limited permissions

1.78     Thu Oct 21 22:41:31 CEST 2013
          - added business process addon
          - new --all-inclusive/-i mode for cli html page export which includes all css, js and
            images in one single page
          - show apache status in performance page